--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/nice-select.css">
+    <link icon="icon" href="images/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -478,6 +479,14 @@
                                     <p class="bottom">১০ মিনিটের ড্রাইভ <br>
                                     ৮০৭ এল্মউড এভে, বাফেলো, নিউ ইয়র্ক ১৪২২২ </p>
                                 </div>
+                                <div class="price_item">
+                                    <p class="top">
+                                        আল আকসা সুপার মার্কেট</p>
+
+                                    <img src="images/shape4.png" alt="shape">
+                                    <p class="bottom">১০ মিনিটের ড্রাইভ <br>
+                                        ১৩৫০ ফিলমোর এভে, বাফেলো, নিউ ইয়র্ক ১৪২১১</p>
+                                </div>
                                 
                             </div>
                         </div>
@@ -905,8 +914,8 @@
                         <div class="footer_text">
                             <h5>আমাদের অবস্থান</h5>
                             <img src="images/shape3.png" alt="shape" class="shape-2">
-                            <p> <b>৯৪ রেলিক এভে,
-                                    <br>লাকাওয়ান্না, নিউ ইয়র্ক-১৪২১৪</b></p>
+                            <p> <b>৯৪ রেলিচ এভে,
+                                    <br>লাকাওয়ান্না, নিউ ইয়র্ক-১৪২১৮</b></p>
                             <ul class="footer_link">
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="#"><i class="fab fa-youtube"></i></a></li>
